Identity server implementasyonu
Identity server implementasyonu templatein içine gömüldü.

--- a/CqrsTemplatePack.Creator/content/CQRS/CqrsTemplatePack.Domain/CqrsTemplatePack.Domain.csproj
+++ b/CqrsTemplatePack.Creator/content/CQRS/CqrsTemplatePack.Domain/CqrsTemplatePack.Domain.csproj
@@ -24,4 +24,9 @@
     <Folder Include="MongoEntities\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Common\{{solutionname}}.Common\{{solutionname}}.Common.csproj" />
+  </ItemGroup>
+
+  
 </Project>
