--- a/CqrsTemplatePack.Creator/content/Presentation/CqrsTemplatePack.Web.UI/CqrsTemplatePack.Web.UI.csproj
+++ b/CqrsTemplatePack.Creator/content/Presentation/CqrsTemplatePack.Web.UI/CqrsTemplatePack.Web.UI.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
+    <PackageReference Include="CQRS.WebHelper" Version="1.0.3.1" />
   </ItemGroup>
 
   <ItemGroup>
