--- a/CqrsTemplatePack.Creator/content/Presentation/CqrsTemplatePack.UI.Web/CqrsTemplatePack.UI.Web.csproj
+++ b/CqrsTemplatePack.Creator/content/Presentation/CqrsTemplatePack.UI.Web/CqrsTemplatePack.UI.Web.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.10" />
     <PackageReference Include="Core.WebHelper" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.10" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
